# SPPAR

./: CMakeLists.txt  LICENSE.txt  README.md  TODO.md  doxyfile  doxyfile.in
cmake/modules/: FindSPPAR.cmake
examples/: CMakeLists.txt
examples/Quadtree/: CMakeLists.txt  Quadtree.cpp
include/: SPPAR.hpp
include/SPPAR/: Config.hpp  Quadtree.hpp  Rect.hpp
tests/: CMakeLists.txt  RunAllTests.cpp
tests/Quadtree/: QuadtreeTest.hpp
tests/Rect/: RectTest.hpp
